[package]
name = "rrule"
version = "0.1.0"
authors = ["Andrés Medina <andresnrx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "^0.4"
chrono-tz = "0.5"
iana-time-zone = "^0.1"

[dev-dependencies]
approx = "0.3.2"
